add tornado profile